# flowerpower

./: main.py  pyproject.toml
app/: main.py
tests/test_app/: test_main.py
tests/test_packages/test_core/: test_greeting.py
